--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node ./app.js"
+    "test": "node  ./src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@iarna/toml": "^2.2.5",
-    "axios": "^1.3.4",
-    "cookie": "^0.5.0",
-    "node-schedule": "^2.1.1",
-    "qs": "^6.11.1"
+    "log4js": "^6.9.1",
+    "superagent": "^8.1.2"
   }
 }
